// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for DawnAnalytics's track destination action: all fields 1`] = `
Array [
  Object {
    "event": "3Tu&]Rm4X[",
    "properties": Object {
      "testType": "3Tu&]Rm4X[",
    },
    "user_id": "3Tu&]Rm4X[",
  },
]
`;

exports[`Testing snapshot for DawnAnalytics's track destination action: required fields 1`] = `
Array [
  Object {
    "event": "3Tu&]Rm4X[",
    "properties": Object {},
    "user_id": "3Tu&]Rm4X[",
  },
]
`;
